--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.336.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-date-picker": "^10.6.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
