--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.336.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-heart": "^1.0.6",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.12.1",
