--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.1",
@@ -26,6 +27,7 @@
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.4",
     "embla-carousel-react": "^8.0.0-rc23",
     "firebase": "^10.8.0",
@@ -35,12 +37,14 @@
     "react-chartjs-2": "^5.2.0",
     "react-date-picker": "^10.6.0",
     "react-datepicker": "^6.1.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.0.11",
     "react-router-dom": "^6.22.0",
+    "react-simple-chatbot": "^0.6.1",
     "recharts": "^2.12.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
