--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^6.22.0",
     "react-simple-chatbot": "^0.6.1",
     "recharts": "^2.12.1",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
